Add flag_id registry.
See: https://www.dlms.com/flag-id/flag-id-list

--- a/custom_components/dlms_cosem/manifest.json
+++ b/custom_components/dlms_cosem/manifest.json
@@ -16,7 +16,8 @@
         "dlms_cosem"
     ],
     "requirements": [
-        "dlms-cosem==23.1.0a2"
+        "dlms-cosem==23.1.0a2",
+        "aiofiles==23.1.0"
     ],
     "version": "0.1.0"
 }
