--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,10 @@
     ],
     "files.associations": {
         "*.yaml": "home-assistant"
+    },
+    "[json]": {
+        "editor.detectIndentation": false,
+        "editor.insertSpaces": true,
+        "editor.tabSize": 2
     }
 }
