Use ijson for flag id lookup.

--- a/custom_components/dlms_cosem/manifest.json
+++ b/custom_components/dlms_cosem/manifest.json
@@ -1,23 +1,24 @@
 {
-    "domain": "dlms_cosem",
-    "name": "DLMS/COSEM",
-    "codeowners": [
-        "@denpamusic"
-    ],
-    "config_flow": true,
-    "dependencies": [
-        "network"
-    ],
-    "documentation": "https://github.com/denpamusic/homeassistant-dlms-cosem",
-    "integration_type": "device",
-    "iot_class": "local_poll",
-    "issue_tracker": "https://github.com/denpamusic/homeassistant-dlms-cosem/issues",
-    "loggers": [
-        "dlms_cosem"
-    ],
-    "requirements": [
-        "dlms-cosem==23.1.0a2",
-        "aiofiles==23.1.0"
-    ],
-    "version": "0.1.0"
+  "domain": "dlms_cosem",
+  "name": "DLMS/COSEM",
+  "codeowners": [
+    "@denpamusic"
+  ],
+  "config_flow": true,
+  "dependencies": [
+    "network"
+  ],
+  "documentation": "https://github.com/denpamusic/homeassistant-dlms-cosem",
+  "integration_type": "device",
+  "iot_class": "local_poll",
+  "issue_tracker": "https://github.com/denpamusic/homeassistant-dlms-cosem/issues",
+  "loggers": [
+    "dlms_cosem"
+  ],
+  "requirements": [
+    "dlms-cosem==23.1.0a2",
+    "aiofiles==23.1.0",
+    "ijson==3.2.0.post0"
+  ],
+  "version": "0.1.0"
 }
