--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,23 @@
 {
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.formatting.provider": "none",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true
+        "source.organizeImports": "explicit"
     },
-    "isort.args": [
-        "--profile",
-        "black"
-    ],
-    "python.linting.flake8Enabled": true,
-    "python.linting.mypyEnabled": true,
-    "python.linting.pylintEnabled": true,
     "editor.rulers": [
         72,
         88
     ],
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff",
+        "editor.tabSize": 4
+    },
+    "[json]": {
+        "editor.tabSize": 2
+    },
     "files.associations": {
         "*.yaml": "home-assistant"
     },
-    "[json]": {
-        "editor.detectIndentation": false,
-        "editor.insertSpaces": true,
-        "editor.tabSize": 2
-    },
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
-    }
+    "json.format.keepLines": true
 }
