--- a/custom_components/dlms_cosem/manifest.json
+++ b/custom_components/dlms_cosem/manifest.json
@@ -16,7 +16,7 @@
     "dlms_cosem"
   ],
   "requirements": [
-    "dlms-cosem==24.1.0",
+    "git+https://github.com/denpaforks/dlms-cosem.git@master#dlms-cosem==24.1.0.2024031102",
     "aiofiles==23.2.1",
     "ijson==3.2.3"    
   ],
