--- a/pyproject.toml
+++ b/pyproject.toml
@@ -210,7 +210,7 @@ legacy_tox_ini = """
 
     commands =
         codespell
-        ruff .
+        ruff check .
 
     [testenv:test]
     deps =
