--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ ignore-words-list = "hass"
 
 [tool.mypy]
 python_version = "3.12"
+platform = "linux"
 show_error_codes = true
-follow_imports = "silent"
+follow_imports = "normal"
+enable_incomplete_feature = "NewGenericSyntax"
 local_partial_types = true
 strict_equality = true
 no_implicit_optional = true
@@ -35,7 +37,9 @@ disable_error_code = [
 extra_checks = false
 check_untyped_defs = true
 disallow_incomplete_defs = true
+disallow_subclassing_any = true
 disallow_untyped_calls = true
+disallow_untyped_decorators = true
 disallow_untyped_defs = true
 warn_return_any = true
 warn_unreachable = true
